Page MenuHome GnuPG

cipher/sha512.c: build failure without arm neon asm
Closed, ResolvedPublic

Description

Build is broken since commit 8a44c55d2fb758f726b8b436aa5c0b88a6c6f112 because _gcry_sha512_transform_armv7_neon is undefined when !USE_ARM_NEON_ASM but it is used as soon as USE_ARM_ASM is defined resulting in the following build failure:

/bin/bash ../libtool  --tag=CC   --mode=link /home/giuliobenetti/autobuild/run/instance-0/output-1/host/bin/arm-linux-gcc  -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64  -Os   -fvisibility=hidden -fno-delete-null-pointer-checks -Wall   -o mpicalc mpicalc-mpicalc.o libgcrypt.la -lgpg-error
libtool: link: /home/giuliobenetti/autobuild/run/instance-0/output-1/host/bin/arm-linux-gcc -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fvisibility=hidden -fno-delete-null-pointer-checks -Wall -o mpicalc mpicalc-mpicalc.o  ./.libs/libgcrypt.so -lgpg-error -Wl,-rpath -Wl,/home/giuliobenetti/autobuild/run/instance-0/output-1/build/libgcrypt-1.9.0/src/.libs
/home/giuliobenetti/autobuild/run/instance-0/output-1/host/opt/ext-toolchain/bin/../lib/gcc/arm-buildroot-linux-uclibcgnueabi/8.3.0/../../../../arm-buildroot-linux-uclibcgnueabi/bin/ld: ./.libs/libgcrypt.so: undefined reference to `_gcry_sha512_transform_armv7_neon'

To fix this build failure, USE_ARM_ASM could be replaced by USE_ARM_NEON_ASM .

Full build log:

Details

Version
1.9.0

Event Timeline

It seems that this issue has already been reported with a better fix: https://lists.gnupg.org/pipermail/gcrypt-devel/2021-January/005060.html
Feel free to close this issue.

Thanks for the report. As you noticed, issue had been reported already.

werner changed the task status from Open to Testing.Jan 28 2021, 10:30 AM
werner claimed this task.