cipher/sha512: Fix non-NEON ARM assembly implementation

* cipher/sha512.c (do_transform_generic)
[USE_ARM_ASM]: Switch to the non-NEON assembly implementation.
--

When building for ARM CPUs that don't support NEON, linking fails
with an "undefined reference to _gcry_sha512_transform_armv7_neon"
error.  Switching to the non-NEON assembly function corrects this.

[jk: add bug-id]
GnuPG-bug-id: 5263
Signed-off-by: Jussi Kivilinna <jussi.kivilinna@iki.fi>